--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
-        "leaflet": "^1.9.4"
+        "leaflet": "^1.9.4",
+        "lucide-react": "^0.539.0"
     }
 }
