--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "leaflet": "^1.9.4",
         "lucide-react": "^0.539.0",
+        "react-google-recaptcha": "^3.1.0",
         "react-hot-toast": "^2.6.0",
         "recharts": "^3.1.2"
     }
